[package]
name = "ac-gobbler"
authors = ["LHerskind <lasse@aztecprotocol.com>"]
version = "0.1.0"
edition = "2021"
keywords = ["ethereum", "aztec", "rollup"]

[dependencies]
microkv = "0.2.9"
clap = { version = "4.0.18", features = ["derive"] }
ethers = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
indicatif = "0.17.2"
csv = "1.2.0"

[[bin]]
name = "ac-gobbler"
path = "src/main.rs"